2014-05-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.18 released.

2014-05-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.17 released.

2014-05-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.16 released.

2014-05-28  Carl Hetherington  <cth@carlh.net>

	* Rework KDM generation to be about CPLs rather than DCPs,
	and allow specification of any CPL to generate KDMs for.

	Requested-by: Richard Turner

2014-05-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.15 released.

2014-05-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.14 released.

2014-05-26  Carl Hetherington  <cth@carlh.net>

	* Fix problems with non-zero FFmpeg content start times.

2014-05-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.13 released.

2014-05-24  Carl Hetherington  <cth@carlh.net>

	* Fix problems with log setup from config.

2014-05-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.12 released.

2014-05-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.11 released.

2014-05-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.10 released.

2014-05-21  Carl Hetherington  <cth@carlh.net>

	* Tidy up logging a bit and make it configurable from the GUI
	(moving a few things into an Advanced preferences tab at
	the same time).

2014-05-19  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.9 released.

2014-05-19  Carl Hetherington  <cth@carlh.net>

	* Decode image sources in the multi-threaded part
	of the transcoder, rather than the single-threaded.

2014-05-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.8 released.

2014-05-16  Carl Hetherington  <cth@carlh.net>

	* Fix various confusions in translations of abbreviated
	channel names (Lc, Rc etc.)

2014-05-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.7 released.

2014-05-14  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp to remove checks on PCM MXF edit rates,
	so we can generate strange ones in DCP-o-matic.
